# hybrid-finmate

./: .gitignore  README.md
python/: pyproject.toml
rust/: Cargo.toml
